# ESLE-2021-G4

./: .gitignore  README.md  cassandra-2.yaml  single-cassandra.yaml
cass_destroyer/: Cargo.toml
cass_destroyer/src/: main.rs  parser.rs
docker_swarm/: cassandra-1.yaml  cassandra.yaml
report/: main.tex  ref.bib
stress/: Dockerfile  log_write  tweets.yaml
stress/part1/workload/: users.yaml
stress/part2/graphs/: net_no_1.gp  net_no_quorum.gp  net_row_1.gp  net_row_quorum.gp  simple_no_1.gp  simple_no_quorum.gp  simple_row_1.gp  simple_row_quorum.gp
stress/part2/results/: net_no_1.html  net_no_1_2.html  net_no_quorum.html  net_no_quorum_2.html  net_row_1.html  net_row_1_2.html  net_row_quorum.html  net_row_quorum_2.html  simple_no_1.html  simple_no_1_2.html  simple_no_quorum.html  simple_row_1.html  (+4 more)
terraform_code/: .gitignore  main.tf  script.sh  terraform.tfvars.example
terraform_code/eks-cluster-panel/: cluster.tf  outputs.tf  variables.tf
terraform_code/eks-node-groups/: eks-node-groups.tf  variables.tf
terraform_code/helm_packages/: packages.tf  variables.tf
terraform_code/iam/: cluster-role.tf  iam_lb_policy.json  node-role.tf  outputs.tf  variables.tf
terraform_code/k8_objects/: cassandra.yaml  configmaps.tf  loadbalancer.tf  pods_and_internal_services.tf  pods_and_volumes.tf  services_and_lbs.tf
terraform_code/k8_service_account/: account.tf  output.tf  variables.tf
terraform_code/network/: outputs.tf  private_subnet.tf  public_subnet.tf  variables.tf  vpc.tf
terraform_code/security_groups/: outputs.tf  security_groups.tf  variables.tf
(+29 files in other folders)
