[package]
name = "cass_destroyer"
version = "0.1.0"
edition = "2018"

[dependencies]
cassandra-cpp      = "0.17"
chrono             = "0.4"
structopt          = "0.3"
tokio              = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tracing            = "0.1"
tracing-subscriber = "0.2"
